--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,13 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 html {
    line-height: 1.15;
    /* 1 */
@@ -309,7 +316,7 @@ template {
 html {
    height: 100%;
    -webkit-box-sizing: border-box;
-           box-sizing: border-box;
+   box-sizing: border-box;
    scroll-behavior: smooth;
    overflow-x: hidden;
 }
@@ -325,8 +332,8 @@ body {
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
-       -ms-flex-direction: column;
-           flex-direction: column;
+   -ms-flex-direction: column;
+   flex-direction: column;
    margin: 0;
    padding: 0;
    font-size: 16px;
@@ -376,8 +383,8 @@ p {
 
 .main {
    -webkit-box-flex: 1;
-       -ms-flex-positive: 1;
-           flex-grow: 1;
+   -ms-flex-positive: 1;
+   flex-grow: 1;
 }
 
 .header {
@@ -431,13 +438,13 @@ p {
    padding: 12px 16px;
    background-color: #f9f9f9;
    -webkit-box-shadow: 0px 8px 16px 0px #00000033;
-           box-shadow: 0px 8px 16px 0px #00000033;
+   box-shadow: 0px 8px 16px 0px #00000033;
    border-radius: 8px;
 }
 
 .header-end-select:hover .header-end-select-content {
    display: block;
- }
+}
 
 @media only screen and (min-width: 1024px) {
    .header-end {
@@ -1097,4 +1104,35 @@ p {
    display: inline-block;
    color: #000000;
    margin: 0 8px;
+}
+
+/* ! Blog page's styles */
+.filter-btn.active {
+   font-size: 18px;
+   color: #ea580c;
+}
+
+.blog-post:not(:last-child) {
+   margin-bottom: 25px;
+}
+
+@media only screen and (min-width: 768px) {
+   .blog-post:not(:last-child) {
+      margin-bottom: 40px;
+   }
+}
+
+@media only screen and (min-width: 1280px) {
+   .blog-post:not(:last-child) {
+      margin-bottom: 60px;
+   }
+}
+
+.category-title::before {
+   content: "";
+   display: inline-block;
+   width: 30px;
+   height: 2px;
+   margin-right: 10px;
+   background-color: #000;
 }
