Changed some images and post-one's title and text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,13 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 html {
    line-height: 1.15;
    /* 1 */
@@ -1150,5 +1157,3 @@ p {
 .more-viewed-blogs:not(:last-child) {
    margin-bottom: 20px;
 }
-
-/* ! Post one styles */
